feat: add color design tokens

--- a/package.json
+++ b/package.json
@@ -98,5 +98,8 @@
     "singleQuote": true,
     "arrowParens": "avoid",
     "trailingComma": "all"
+  },
+  "dependencies": {
+    "@lion/core": "^0.12.0"
   }
 }
