--- a/package.json
+++ b/package.json
@@ -24,18 +24,22 @@
     "lint:prettier": "prettier \"**/*.js\" --list-different || (echo '↑↑ these files are not prettier formatted ↑↑' && exit 1)",
     "release": "changeset publish",
     "start": "npm run storybook",
-    "storybook": "start-storybook -p 9001",
-    "storybook:build": "build-storybook",
-    "storybook:build:start": "web-dev-server --root-dir storybook-static --open",
+    "storybook": "start-storybook -p 9001 -s ./dev-assets",
+    "storybook:build": "NODE_OPTIONS='--max-old-space-size=8192' build-storybook",
+    "storybook:build:start": "npm run storybook:build && web-dev-server --root-dir storybook-static --open",
     "test": "run-p test:browser",
     "test:browser": "web-test-runner \"packages/**/*.test.js\" --coverage",
     "test:browser:all": "web-test-runner \"packages/**/*.test.js\" --playwright --browsers webkit chromium firefox --coverage",
     "test:browser:watch": "web-test-runner \"packages/**/*.test.js\" --watch"
   },
+  "dependencies": {
+    "@lion/core": "^0.12.0"
+  },
   "devDependencies": {
     "@changesets/cli": "^2.10.2",
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
+    "@lion/helpers": "^0.5.8",
     "@mdjs/core": "^0.4.0",
     "@open-wc/demoing-storybook": "^2.0.2",
     "@open-wc/eslint-config": "^1.3.0",
@@ -98,8 +102,5 @@
     "singleQuote": true,
     "arrowParens": "avoid",
     "trailingComma": "all"
-  },
-  "dependencies": {
-    "@lion/core": "^0.12.0"
   }
 }
