--- a/package.json
+++ b/package.json
@@ -33,7 +33,14 @@
     "test:browser:watch": "web-test-runner \"packages/**/*.test.js\" --watch"
   },
   "dependencies": {
-    "@lion/core": "^0.12.0"
+    "@lion/ajax": "^0.5.4",
+    "@lion/core": "^0.12.0",
+    "@lion/form-core": "^0.6.1",
+    "@lion/icon": "^0.7.4",
+    "@lion/localize": "^0.14.4",
+    "@lion/overlays": "^0.19.0",
+    "@lion/validate-messages": "^0.2.15",
+    "singleton-manager": "^1.1.2"
   },
   "devDependencies": {
     "@changesets/cli": "^2.10.2",
