--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@lion/core": "^0.12.0",
     "@lion/form-core": "^0.6.1",
     "@lion/icon": "^0.7.4",
+    "@lion/input": "^0.9.2",
     "@lion/localize": "^0.14.4",
     "@lion/overlays": "^0.19.0",
     "@lion/validate-messages": "^0.2.15",
